--- a/sass/base/_animation.scss
+++ b/sass/base/_animation.scss
@@ -1,16 +1,29 @@
-@mixin paraAnimation($first, $second) {
-  @keyframes headingTxtAnimation {
-    0% {
-      transform: translateX($first);
-      opacity: 0;
-    }
-    50% {
-      transform: translateX($second);
-      opacity: 0.5;
-    }
-    100% {
-      transform: translateX(0);
-      opacity: 1;
-    }
+@keyframes paraAnimation {
+  0% {
+    transform: translateX(8rem);
+    opacity: 0;
+  }
+  50% {
+    transform: translateX(4rem);
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes btnAnimation {
+  0% {
+    transform: translateY(8rem);
+    opacity: 0;
+  }
+  50% {
+    transform: translateY(4rem);
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
