--- a/sass/base/_animation.scss
+++ b/sass/base/_animation.scss
@@ -1,3 +1,18 @@
+@keyframes headerAnimation {
+  0% {
+    transform: translateX(-8rem);
+    opacity: 0;
+  }
+  50% {
+    transform: translateX(-4rem);
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
 @keyframes paraAnimation {
   0% {
     transform: translateX(8rem);
