--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -28,9 +28,9 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 600;
   font-size: 4.5rem;
-  color: #fff;
+  color: $font-color;
   width: 49rem;
-  // animation: @include paraMovementAnimation(-8rem, -4rem) 300ms linear 100ms;
+  animation: headerAnimation 300ms linear 100ms;
   animation-fill-mode: backwards;
 }
 
@@ -39,7 +39,7 @@ body {
 }
 
 .para {
-  color: #fff;
+  color: $font-color;
   font-size: 1.8rem;
   width: 52rem;
   font-family: "Roboto", sans-serif;
