--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,19 @@
 /* font-family: 'Rancho', cursive; ===>poppies 400, 600 for heading & body*/
 /* font-family: 'Roboto', sans-serif;   ===>poppies 400, 600 for heading & body*/
+@keyframes headerAnimation {
+  0% {
+    transform: translateX(-8rem);
+    opacity: 0;
+  }
+  50% {
+    transform: translateX(-4rem);
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
 @keyframes paraAnimation {
   0% {
     transform: translateX(8rem);
@@ -67,6 +81,7 @@ body {
   font-size: 4.5rem;
   color: #fff;
   width: 49rem;
+  animation: headerAnimation 300ms linear 100ms;
   animation-fill-mode: backwards;
 }
 
